--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
   <!-- this is going to do whatever the tag's defaults are -->
   <polaris-chip></polaris-chip>
   <!-- this is going to take the tag and change the title -->
+  <polaris-chip title="News of Record" link="https://psu.edu/"></polaris-chip>
+  <polaris-chip title="Faculty and Staff"></polaris-chip>
+  <polaris-chip title="Sports are the only thing that matter"></polaris-chip>
+  <polaris-chip title="Grants and stuff"></polaris-chip>
   <polaris-chip title="Cool stuff"></polaris-chip>
 
   <h1>my-card</h1>
