my-card updates

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     polaris-chip {
       margin: 16px;
     }
+
+    my-card {
+      margin: 18px;
+    }
+
   </style>
   <title>polaris-chip / my-card</title>
 </head>
@@ -36,6 +41,10 @@
 
   <h1>my-card</h1>
   <my-card></my-card>
+  <my-card title="WOW"></my-card>
+  <my-card title="That's wild"></my-card>
+  <my-card title="More cool stuff"></my-card>
+  <my-card title="Groovy"></my-card>
 
   <!-- this is what is bringing in the definition for this tag -->
   <script type="module" src="./src/polaris-chip.js"></script>
