updates to my-card

--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
 
   <h1>my-card</h1>
   <my-card></my-card>
-  <my-card title="WOW"></my-card>
-  <my-card title="That's wild"></my-card>
-  <my-card title="More cool stuff"></my-card>
-  <my-card title="Groovy"></my-card>
+  <my-card title="Fredrick"></my-card>
+  <my-card title="Cameron"></my-card>
+  <my-card title="Kenny"></my-card>
 
   <!-- this is what is bringing in the definition for this tag -->
   <script type="module" src="./src/polaris-chip.js"></script>
