--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
       margin: 18px;
     }
 
+    counter-app {
+      margin: 16px;
+      font-family: sans-serif;
+    }
+
   </style>
   <title>polaris-chip / my-card</title>
 </head>
@@ -45,9 +50,13 @@
   <my-card title="Cameron"></my-card>
   <my-card title="Kenny"></my-card>
 
+  <h1>Counter</h1>
+  <counter-app></counter-app>
+
   <!-- this is what is bringing in the definition for this tag -->
   <script type="module" src="./src/polaris-chip.js"></script>
   <script type="module" src="./src/my-card.js"></script>
+  <script type="module" src="./src/counter-app.js"></script>
 </body>
 
 </html>
