--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@
 </head>
 
 <body>
-  <h1>polaris-chip</h1>
+  <!-- <h1>polaris-chip</h1> -->
   <!-- this is going to do whatever the tag's defaults are -->
-  <polaris-chip></polaris-chip>
+  <!-- <polaris-chip></polaris-chip> -->
   <!-- this is going to take the tag and change the title -->
-  <polaris-chip title="News of Record" link="https://psu.edu/"></polaris-chip>
-  <polaris-chip title="Faculty and Staff"></polaris-chip>
-  <polaris-chip title="Sports are the only thing that matter"></polaris-chip>
-  <polaris-chip title="Grants and stuff"></polaris-chip>
-  <polaris-chip title="Cool stuff"></polaris-chip>
+  <!-- <polaris-chip title="News of Record" link="https://psu.edu/"></polaris-chip> -->
+  <!-- <polaris-chip title="Faculty and Staff"></polaris-chip> -->
+  <!-- <polaris-chip title="Sports are the only thing that matter"></polaris-chip> -->
+  <!-- <polaris-chip title="Grants and stuff"></polaris-chip> -->
+  <!-- <polaris-chip title="Cool stuff"></polaris-chip> -->
 
-  <h1>my-card</h1>
-  <my-card></my-card>
-  <my-card title="Fredrick"></my-card>
-  <my-card title="Cameron"></my-card>
-  <my-card title="Kenny"></my-card>
+  <!-- <h1>my-card</h1> -->
+  <!-- <my-card></my-card> -->
+  <!-- <my-card title="Fredrick"></my-card> -->
+  <!-- <my-card title="Cameron"></my-card> -->
+  <!-- <my-card title="Kenny"></my-card> -->
 
-  <h1>Counter</h1>
+  <h1>Counters</h1>
   <counter-app></counter-app>
 
   <!-- this is what is bringing in the definition for this tag -->
