--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
   <h1>Counters</h1>
   <counter-app></counter-app>
+  <counter-app title="Cool Counter" min="10" max="25" value="10"></counter-app>
 
   <!-- this is what is bringing in the definition for this tag -->
   <script type="module" src="./src/polaris-chip.js"></script>
