--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
       font-family: sans-serif;
     }
 
+    alert-app {
+      margin: 16px;
+      font-family: sans-serif;
+    }
+
   </style>
   <title>polaris-chip / my-card</title>
 </head>
@@ -54,10 +59,14 @@
   <counter-app></counter-app>
   <counter-app title="Cool Counter" min="10" max="25" value="10"></counter-app>
 
+  <h1>Alerts</h1>
+  <alert-app></alert-app>
+
   <!-- this is what is bringing in the definition for this tag -->
   <script type="module" src="./src/polaris-chip.js"></script>
   <script type="module" src="./src/my-card.js"></script>
   <script type="module" src="./src/counter-app.js"></script>
+  <script type="module" src="./src/alert-app.js"></script>
 </body>
 
 </html>
