work in progress

--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@
   <!-- <my-card title="Cameron"></my-card> -->
   <!-- <my-card title="Kenny"></my-card> -->
 
+  <h1>Alerts</h1>
+  <alert-app title="EMERGENCY ALERT"></alert-app>
+  <alert-app title="EMERGENCY ALERT" opened></alert-app>
+
   <h1>Counters</h1>
   <counter-app></counter-app>
   <counter-app title="Cool Counter" min="10" max="25" value="10"></counter-app>
 
-  <h1>Alerts</h1>
-  <alert-app></alert-app>
 
   <!-- this is what is bringing in the definition for this tag -->
   <script type="module" src="./src/polaris-chip.js"></script>
