opens and closes, buttons look different?

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
   <!-- <my-card title="Kenny"></my-card> -->
 
   <h1>Alerts</h1>
+  <h2>Press Open to see alert</h2>
   <alert-app title="EMERGENCY ALERT"></alert-app>
-  <alert-app title="EMERGENCY ALERT" opened></alert-app>
 
   <h1>Counters</h1>
   <counter-app></counter-app>
