made more instances. background color doesn't change?

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
   <h1>Alerts</h1>
   <h2>Press Open to see alert</h2>
   <alert-app title="EMERGENCY ALERT"></alert-app>
+  <alert-app title="WEATHER ALERT" background-color="yellow"></alert-app>
+  <alert-app title="CLOSING ALERT" backgrounf-color="blue"></alert-app>
+ 
 
   <h1>Counters</h1>
   <counter-app></counter-app>
