--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   <h1>Alerts</h1>
   <h2>Press Open to see alert</h2>
-  <alert-app title="EMERGENCY ALERT"></alert-app>
+  <alert-app title="EMERGENCY ALERT" sticky></alert-app>
   <alert-app title="WEATHER ALERT" background-color="yellow"></alert-app>
   <alert-app title="CLOSING ALERT" backgrounf-color="blue"></alert-app>
  
