--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <!-- <my-card title="Cameron"></my-card> -->
   <!-- <my-card title="Kenny"></my-card> -->
 
-  <h1>Alerts</h1>
+  <!-- <h1>Alerts</h1>
   <h2>Press Open to see alert</h2>
   <alert-app title="EMERGENCY ALERT" sticky></alert-app>
   <alert-app title="WEATHER ALERT" background-color="yellow"></alert-app>
@@ -64,7 +64,8 @@
 
   <h1>Counters</h1>
   <counter-app></counter-app>
-  <counter-app title="Cool Counter" min="10" max="25" value="10"></counter-app>
+  <counter-app title="Cool Counter" min="10" max="25" value="10"></counter-app> -->
+  <haxcms-party-ui></haxcms-party-ui>
 
 
   <!-- this is what is bringing in the definition for this tag -->
@@ -72,6 +73,7 @@
   <script type="module" src="./src/my-card.js"></script>
   <script type="module" src="./src/counter-app.js"></script>
   <script type="module" src="./src/alert-app.js"></script>
+  <script type="module" src="./src/haxcms-party-ui.js"></script>
 </body>
 
 </html>
