--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <h1>Counters</h1>
   <counter-app></counter-app>
   <counter-app title="Cool Counter" min="10" max="25" value="10"></counter-app> -->
-  <haxcms-party-ui></haxcms-party-ui>
+  <haxcms-party-ui delete></haxcms-party-ui>
 
 
   <!-- this is what is bringing in the definition for this tag -->
