--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       margin: 0;
       padding: 0;
       font-family: sans-serif;
-      background-color: #ededed;
+      background-color: #314d64;
     }
     polaris-chip {
       margin: 16px;
